# workflow

./: .gitignore  README.md  build-ext.bat  start.bat
backend/: gems.json  pyproject.toml  requirements.txt  setup_frontend.py  validate.py
backend/app/: config.py  main.py
backend/app/core/: job_store.py  sse.py  task_queue.py
backend/app/models/: __init__.py  channel.py  fragment.py  image.py  project.py  transcript.py
backend/app/routers/: channels.py  fragments.py  gemini_bridge.py  gems.py  images.py  projects.py  prompts.py  render.py  shorts.py  timeline.py  transcribe.py  workflow.py
backend/app/services/: forge_bridge.py  gemini_cookie_store.py  gemini_web.py  gemini_web_provider.py  gems_manager.py  kenburns.py  orchestrator.py  project_service.py  prompt_generation.py  timeline_migration.py  whisper_pipeline.py
backend/app/services/shorts_maker/: analyzer.py  cli.py  clipper.py  srt_parser.py  subtitler.py  types.py
extension/: bridge.js  manifest.json  package.json  token-gen.js  tsconfig.json  wxt.config.ts
extension/entrypoints/: bridge.content.ts  gemini-bridge.background.ts  token-gen.content.ts
frontend/: index.html  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: Badge.tsx  Card.tsx  DropZone.tsx  EmptyState.tsx  FragmentList.tsx  Modal.tsx  PageHeader.tsx  ProgressBar.tsx  SRTPreview.tsx  ScriptSelector.tsx  SetupWizard.tsx  Toast.tsx  VideoPlayer.tsx
frontend/src/hooks/: useActiveProject.ts  useSSE.ts  useWebSocket.ts
(+16 files in other folders)
