[project]
name = "workflow"
version = "0.1.0"
description = "AI video production workflow — image generation, transcription, and Ken Burns rendering"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.9",
    "websockets>=13.0",
    "aiofiles>=24.0.0",
    "aiosqlite>=0.20.0",
    "faster-whisper>=1.0.3",
    "ctranslate2>=4.4.0",
    "Pillow>=9.0.0",
    "PyYAML>=6.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
strict = true
python_version = "3.12"
